Minor Java 16+ update in Lambdas & Stream API code snippets